--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -50,7 +50,7 @@ hr.star-primary {
 
 hr.star-light:after,
 hr.star-primary:after {
-    content: "\f005";
+    content: "\2622";
     display: inline-block;
     position: relative;
     top: -.8em;
@@ -157,20 +157,25 @@ header .intro-text .skills {
 }
 
 .navbar a:focus {
-    outline: 0; color
+    outline: 0;
 }
 
 .navbar .navbar-nav {
     letter-spacing: 1px;
 }
 
-.navbar .navbar-nav li a:focus {
+.navbar .navbar-nav li a:focus, .navbar .navbar-header a:focus {
     outline: 0;
+    color: #ff5733;
 }
 
 .navbar-default,
 .navbar-inverse {
     border: 0;
+}
+
+.navbar .navbar-nav li a:hover, .navbar .navbar-header a:hover {
+    color: #ff5733;
 }
 
 section {
