--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -177,6 +177,11 @@ header .intro-text .skills {
 .navbar .navbar-nav li a:hover, .navbar .navbar-header a:hover {
     color: #ff5733;
 }
+.navbar-default .navbar-nav>.active>a,
+.navbar-default .navbar-nav>.active>a:hover,
+.navbar-default .navbar-nav>.active>a:focus {
+    background: rgba(255, 87, 51, 0.8);
+}
 
 section {
     padding: 100px 0;
@@ -211,19 +216,19 @@ section.success a.active {
     }
 }
 
-#portfolio .portfolio-item {
+#skills .portfolio-item {
     right: 0;
     margin: 0 0 15px;
 }
 
-#portfolio .portfolio-item .portfolio-link {
+#skills .portfolio-item .portfolio-link {
     display: block;
     position: relative;
     margin: 0 auto;
     max-width: 400px;
 }
 
-#portfolio .portfolio-item .portfolio-link .caption {
+#skills .portfolio-item .portfolio-link .caption {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -234,11 +239,11 @@ section.success a.active {
     transition: all ease .5s;
 }
 
-#portfolio .portfolio-item .portfolio-link .caption:hover {
+#skills .portfolio-item .portfolio-link .caption:hover {
     opacity: 1;
 }
 
-#portfolio .portfolio-item .portfolio-link .caption .caption-content {
+#skills .portfolio-item .portfolio-link .caption .caption-content {
     position: absolute;
     top: 50%;
     width: 100%;
@@ -249,28 +254,35 @@ section.success a.active {
     color: #fff;
 }
 
-#portfolio .portfolio-item .portfolio-link .caption .caption-content i {
+#skills .portfolio-item .portfolio-link .caption .caption-content i {
     margin-top: -12px;
 }
 
-#portfolio .portfolio-item .portfolio-link .caption .caption-content h3,
-#portfolio .portfolio-item .portfolio-link .caption .caption-content h4 {
+#skills .portfolio-item .portfolio-link .caption .caption-content h3,
+#skills .portfolio-item .portfolio-link .caption .caption-content h4 {
     margin: 0;
 }
 
-#portfolio * {
+#skills * {
     z-index: 2;
 }
 
 @media(min-width:767px) {
-    #portfolio .portfolio-item {
+    #skills .portfolio-item {
         margin: 0 0 30px;
     }
 }
-
+.btn {
+    background-color: #ff5733;
+    border: none;
+}
+.btn:hover,
+.btn:focus,
+.btn:active {
+    background-color: #ee4622;
+}
 .btn-outline {
     margin-top: 15px;
-    border: solid 2px #fff;
     font-size: 20px;
     color: #fff;
     background: 0 0;
@@ -291,6 +303,7 @@ section.success a.active {
     margin-bottom: 0;
     padding-bottom: .5em;
     border-bottom: 1px solid #eee;
+    background: rgba(10,10,10,0.2);
 }
 
 .floating-label-form-group input,
@@ -305,6 +318,7 @@ section.success a.active {
     background: 0 0;
     box-shadow: none!important;
     resize: none;
+    color: #eee;
 }
 
 .floating-label-form-group label {
@@ -335,7 +349,7 @@ section.success a.active {
 }
 
 .floating-label-form-group-with-focus label {
-    color: #888888;
+    color: #eee;
 }
 
 form .row:first-child .floating-label-form-group {
@@ -453,7 +467,7 @@ footer .footer-below {
 
 .portfolio-modal .close-modal .lr .rl {
     z-index: 1052;
-    width: 1px;
+    width: 1px;x
     height: 75px;
     background-color: #2c3e50;
     -webkit-transform: rotate(90deg);
